adding approval stage

--- a/codebase/us-east-1-eks/Jenkinsfile
+++ b/codebase/us-east-1-eks/Jenkinsfile
@@ -84,12 +84,19 @@ pipeline {
                  terraformPlan(params.operation)
                 }
             }
-        // stage('Clean WS')
-        // {
-        //     steps{
-        //     cleanWs()
-        //     }
-        // }
+
+        stage('Approval'){
+            steps{
+                input(message: 'Apply Terraform ?')
+            }
+        }
+
+        stage('Clean WS')
+        {
+            steps{
+            cleanWs()
+            }
+        }
         }
     }
 
