adding apply function

--- a/codebase/us-east-1-eks/Jenkinsfile
+++ b/codebase/us-east-1-eks/Jenkinsfile
@@ -91,6 +91,16 @@ pipeline {
             }
         }
 
+        stage('Terraform Apply') {
+            when {
+                expression {params.operation == "apply" || params.operation == "destroy"  }
+            }
+            steps{
+                 terraformApply(params.operation)
+                }
+            }
+
+
         stage('Clean WS')
         {
             steps{
