--- a/codebase/us-east-1-eks/Jenkinsfile
+++ b/codebase/us-east-1-eks/Jenkinsfile
@@ -53,6 +53,7 @@ pipeline {
         AWS_ACCESS_KEY_ID     = credentials('EKS_AWS_ACCESS_KEY_ID')
         AWS_SECRET_ACCESS_KEY = credentials('EKS_AWS_SECRET_ACCESS_KEY')
         TF_IN_AUTOMATION      = 'true'
+        workingDirectory      = "codebase/us-east-1-eks"
     }
     
     stages{
@@ -63,7 +64,7 @@ pipeline {
         }
         stage('Terraform Init') {
             steps{
-                terraformInit("${params.AWS_REGION}","codebase/us-east-1-eks")
+                terraformInit("${params.AWS_REGION}","${env.workingDirectory}")
                 }
             }
         // stage('Terraform Format') {
@@ -79,7 +80,7 @@ pipeline {
         stage('Terraform Plan') {
 
             steps{
-                 terraformPlan(params.operation)
+                 terraformPlan(params.operation,${env.workingDirectory})
                 }
             }
 
@@ -92,7 +93,7 @@ pipeline {
         stage('Terraform Apply') {
 
             steps{
-                 terraformApply(params.operation)
+                 terraformApply(params.operation,${env.workingDirectory})
                 }
             }
 
