--- a/codebase/us-east-1-eks/Jenkinsfile
+++ b/codebase/us-east-1-eks/Jenkinsfile
@@ -44,6 +44,7 @@ properties([
         
 ])
 
+def map = [aws_region: param.AWS_REGION, action: param.action, instance_type: param.instance_type , desired_number=param.desired_number]
 
 pipeline {
     agent {
@@ -68,6 +69,11 @@ pipeline {
         stage('Terraform Init') {
             steps{
                 terraformInit()
+                }
+        }
+        stage('Terraform test') {
+            steps{
+                terraformTest(map)
                 }
             }
 
