--- a/codebase/us-east-1-eks/Jenkinsfile
+++ b/codebase/us-east-1-eks/Jenkinsfile
@@ -44,7 +44,7 @@ properties([
         
 ])
 
-def map = [aws_region: param.AWS_REGION, action: param.action, instance_type: param.instance_type , desired_number=param.desired_number]
+def map = [aws_region: param.AWS_REGION, action: param.action, instance_type: param.instance_type , desired_number:param.desired_number]
 
 pipeline {
     agent {
